objects/vlocity_ins__PriceListEntry__c.object
<CustomObject>
    <description>Represents the association of taxes and fees to an insurance product. Master-detail child object of the Tax and Fee object.</description>
    <fields>
        <fullName>vlocity_ins__BasePriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Price List</label>
        <referenceTo>vlocity_ins__PriceList__c</referenceTo>
        <relationshipName>BasePriceListEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Condition__c</fullName>
        <description>Formula used to determine if the price list entry is applicable for a specific instance of a product.</description>
        <label>Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisplayText__c</fullName>
        <label>Display Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveFromDate__c</fullName>
        <label>Effective From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveUntilDate__c</fullName>
        <label>Effective Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of this Price List Entry. Used to identify the Price List Entry across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique Price List Entry identifier can be used.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsBasePrice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Base Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsVirtualPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OfferId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>PriceListEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PriceListId__c</fullName>
        <label>Price List</label>
        <referenceTo>vlocity_ins__PriceList__c</referenceTo>
        <relationshipLabel>Price List Entries</relationshipLabel>
        <relationshipName>PriceListEntries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PriceListName__c</fullName>
        <description>Formula: Price List Name.</description>
        <formula>vlocity_ins__PriceListId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PriceList</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PricingElementAmount__c</fullName>
        <description>Formula: Amount from Pricing Element.</description>
        <formula>vlocity_ins__PricingElementId__r.vlocity_ins__Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PricingElementGlobalKey__c</fullName>
        <description>The global key identifier of the selected pricing element. This global key reference is used to point to the currently active pricing element version among all the versions of this pricing element.</description>
        <externalId>true</externalId>
        <label>Pricing Element Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PricingElementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the pricing element version that was currently active at the time it was selected.</description>
        <label>Pricing Element</label>
        <referenceTo>vlocity_ins__PricingElement__c</referenceTo>
        <relationshipName>PriceListEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PricingMatrixBindingData__c</fullName>
        <label>Pricing Matrix Binding</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>ProductPriceListEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PromotionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>vlocity_ins__Promotion__c</referenceTo>
        <relationshipName>PriceListEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PromotionItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion Item</label>
        <referenceTo>vlocity_ins__PromotionItem__c</referenceTo>
        <relationshipName>PriceListEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RulesDescription__c</fullName>
        <label>Description of Rules</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TimePlanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Plan</label>
        <referenceTo>vlocity_ins__TimePlan__c</referenceTo>
        <relationshipName>PriceListEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TimePolicyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Policy</label>
        <referenceTo>vlocity_ins__TimePolicy__c</referenceTo>
        <relationshipName>PriceListEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <description>Type of record.</description>
        <formula>TEXT(vlocity_ins__PriceListId__r.vlocity_ins__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Product Tax and Fee</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Taxes and Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>